--- a/SportUp/UserProfileViewController.storyboard
+++ b/SportUp/UserProfileViewController.storyboard
@@ -246,7 +246,7 @@
                                     </constraints>
                                 </view>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ProfileBalanceTableViewCell" rowHeight="72" id="nxe-cu-0rZ" customClass="ProfileBalanceTableViewCell" customModule="SportUp" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ProfileBalanceTableViewCell" rowHeight="72" id="nxe-cu-0rZ" customClass="ProfileBalanceTableViewCell" customModule="SportUp" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="56" width="375" height="72"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" tableViewCell="nxe-cu-0rZ" id="zx3-Zx-yKr">
